--- a/report.qmd
+++ b/report.qmd
@@ -18,6 +18,8 @@ description: An analysis of rule changes recent to 2025 Major League Baseball.
 editor: visual
 ---
 
+[Source code](https://github.com/hicks017/MLB-rule-changes "GitHu: Hicks017 MLB-rule-changes") \| PDF version (WIP)
+
 ## Background
 
 The year 2020 brought big changes to the world, such as how Major League Baseball (MLB) is played. In fact, the five-year span of 2019-2023 had the largest number of rule changes in any other five-year span of MLB history [@inc_mlb_nodate]. These efforts aimed to reduce the length of games, increase scoring, preserve player safety, and increase viewership. The introduction of the three‑batter minimum for relief pitchers in 2020 sought to remove one‑ and two‑batter “specialist” relievers and thereby reduce the number of pitching changes that prolong games [@noauthor_these_nodate; @noauthor_three-batter_nodate; @noauthor_three-batter_nodate-1]. In the same year the league introduced the infamous "Manfred Man", an extra‑innings runner on second base to promote earlier scoring and shorten games stuck in a stalemate [@noauthor_designated_nodate; @noauthor_designated_nodate-3; @noauthor_ghost_2023]. The universal designated hitter eliminated the pitcher’s plate appearance and intended to boost offensive production [@noauthor_designated_nodate-1; @noauthor_designated_nodate-2; @noauthor_new_nodate].
@@ -30,7 +32,7 @@ While each of these rule changes intends to improve the MLB viewing experiences,
 
 ### Study Period
 
-This was a retrospective, observational study of MLB rule changes that were implemented during the 2020-2023 seasons. Only MLB regular-season games were included. Minor league games and postseason matchups were excluded.
+This was a retrospective, observational study of MLB rule changes that were implemented during the 2020-2023 seasons. Only MLB regular-season games were included. Postseason matchups and Minor league games were excluded.
 
 For each studied rule, the year of implementation defined the boundary between pre-rule and post-rule windows. All seasons prior to implementation, through the start of the 2014 regular season, comprised of the pre-rule window. All seasons from implementation and onward, through the end of the 2024 regular season, comprised of the post-rule period.
 
@@ -40,45 +42,45 @@ The 2020 season was a short season due to the COVID-19 pandemic. Therefore this 
 
 Various metrics tailored to each rule change were investigated to perform a robust analysis. These metrics are described alongside the respective rule changes below.
 
-+-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
-| Rule change                                                                   | Outcomes to compare pre/post                                                          |
-+===============================================================================+=======================================================================================+
-| Base stealing encouragements (bigger basements, pitcher disengagement policy) | -   Number of attempted steals by teams per season                                    |
-|                                                                               |                                                                                       |
-|                                                                               | -   Success rate of steals by teams per season                                        |
-+-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
-| Extra-innings baserunner                                                      | -   Number of extra innings required to complete a tied game at the 9th inning        |
-|                                                                               |                                                                                       |
-|                                                                               | -   Number of runs scored during extra innings                                        |
-|                                                                               |                                                                                       |
-|                                                                               | -   Number of batters needed before first run in extra innings                        |
-|                                                                               |                                                                                       |
-|                                                                               | -   Final inning in marathon games                                                    |
-|                                                                               |                                                                                       |
-|                                                                               | -   Total runs in marathon games                                                      |
-|                                                                               |                                                                                       |
-|                                                                               | -   Batters until first score in marathon games                                       |
-+-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
-| Pitch clock                                                                   | -   Length of individual plays                                                        |
-|                                                                               |                                                                                       |
-|                                                                               | -   Combined game duration (action time, excluding non-play time)                     |
-+-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
-| Universal designated hitter                                                   | -   Number of at-bats by pitcher position versus DH position                          |
-|                                                                               |                                                                                       |
-|                                                                               | -   On base percentage of pitcher position versus DH position                         |
-|                                                                               |                                                                                       |
-|                                                                               | -   On-base-plus-slugging of pitcher position versus DH position                      |
-+-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
-| Defensive shift ban                                                           | -   Team BABIP stat across seasons                                                    |
-|                                                                               |                                                                                       |
-|                                                                               | -   Outcome of plays (hit, out, etc) when batter makes pull-side contact              |
-+-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
-| 3-batter minimum                                                              | -   Number of pitchers used per game                                                  |
-|                                                                               |                                                                                       |
-|                                                                               | -   Number of pitching changes in the middle of an inning per game                    |
-|                                                                               |                                                                                       |
-|                                                                               | -   Proportion of games with at least one, two, and three mid-inning pitching changes |
-+-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
++-------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------+
+| Rule change                                                                   | Outcomes to compare pre/post                                                            |
++===============================================================================+=========================================================================================+
+| Base stealing encouragements (larger base size, pitcher disengagement policy) | -   Number of attempted steals by teams per season                                      |
+|                                                                               |                                                                                         |
+|                                                                               | -   Success rate of steals by teams per season                                          |
++-------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------+
+| Extra-innings baserunner                                                      | -   Number of extra innings required to determine a winner after the 9th inning         |
+|                                                                               |                                                                                         |
+|                                                                               | -   Number of runs scored during extra innings                                          |
+|                                                                               |                                                                                         |
+|                                                                               | -   Number of batters needed before first run in extra innings                          |
+|                                                                               |                                                                                         |
+|                                                                               | -   Final inning in marathon games                                                      |
+|                                                                               |                                                                                         |
+|                                                                               | -   Total runs in marathon games                                                        |
+|                                                                               |                                                                                         |
+|                                                                               | -   Batters until first score in marathon games                                         |
++-------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------+
+| Pitch clock                                                                   | -   Length of individual plays                                                          |
+|                                                                               |                                                                                         |
+|                                                                               | -   Combined game duration (excluding commercial breaks and other miscellaneous pauses) |
++-------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------+
+| Universal designated hitter                                                   | -   Number of at-bats by pitcher position versus DH position                            |
+|                                                                               |                                                                                         |
+|                                                                               | -   On base percentage of pitcher position versus DH position                           |
+|                                                                               |                                                                                         |
+|                                                                               | -   On-base-plus-slugging of pitcher position versus DH position                        |
++-------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------+
+| Defensive shift ban                                                           | -   Team BABIP stat across seasons                                                      |
+|                                                                               |                                                                                         |
+|                                                                               | -   Outcome of plays (hit, out, etc) when batter makes pull-side contact                |
++-------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------+
+| 3-batter minimum                                                              | -   Number of pitchers used per game                                                    |
+|                                                                               |                                                                                         |
+|                                                                               | -   Number of pitching changes in the middle of an inning per game                      |
+|                                                                               |                                                                                         |
+|                                                                               | -   Proportion of games with at least one, two, and three mid-inning pitching changes   |
++-------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------+
 
 ### WIP Statistical analysis
 
@@ -98,13 +100,15 @@ Raw data originated from the free, official [MLB Stats API.](https://statsapi.ml
 #| code-summary: Packages
 #| message: false
 
+# Common packages
 library(readr)
 library(dplyr)
 library(tidyr)
 library(tibble)
 library(ggplot2)
 library(broom)
-library(skimr)
+
+# Uncommon packages
 library(gtsummary)
 library(ggsignif)
 
@@ -252,7 +256,7 @@ df_steals |>
 df_steals |>
   arrange(season) |>
   select(team_id, season, attempts) |>
-  tidyr::pivot_wider(id_cols = team_id, names_from = season, values_from = attempts) |>
+  pivot_wider(id_cols = team_id, names_from = season, values_from = attempts) |>
   gtsummary::tbl_summary(
     include = -team_id,
     missing = "no",
@@ -318,9 +322,7 @@ df_steals |>
   
   # Format
   scale_y_continuous(limits = c(0, 1), labels = scales::percent) +
-  scale_color_manual(
-    values = c(`TRUE` = dodger_red, `FALSE` = dodger_blue)
-  ) +
+  scale_color_manual(values = c(`TRUE` = dodger_red, `FALSE` = dodger_blue)) +
   theme(
     axis.title.y = element_blank(),
     panel.grid.minor = element_blank()
@@ -340,7 +342,7 @@ df_steals |>
 
 df_steals |>
   select(season, team_id, sb_success_rate) |>
-  tidyr::pivot_wider(id_cols = team_id, names_from = season, values_from = sb_success_rate) |>
+  pivot_wider(id_cols = team_id, names_from = season, values_from = sb_success_rate) |>
   gtsummary::tbl_summary(
     include = -team_id,
     missing = "no",
@@ -350,6 +352,279 @@ df_steals |>
 ```
 
 ### Extra-innings baserunner
+
+```{r}
+#| code-summary: Data
+#| message: false
+
+# Get table of games with extra innings and remove duplicates
+df_extras <- read_csv(file.path(path, "extra_innings_games.csv"))
+df_extras <- distinct(df_extras)
+
+# Change name for Cleveland to the Guardians
+df_extras <- mutate(
+  df_extras,
+  team_winner = ifelse(
+    endsWith(team_winner, "Indians"),
+    "Cleveland Guardians",
+    team_winner
+  ),
+  team_loser = ifelse(
+    endsWith(team_loser, "Indians"),
+    "Cleveland Guardians",
+    team_loser
+  )
+)
+
+# Count innings over 9 per game per year
+df_extras <- 
+  df_extras |>
+  mutate(extras = final_inning - 9) |>
+  
+  # Add indication of rule change and change year to a factor
+  mutate(rule_change = ifelse(year < 2020, FALSE, TRUE)) |>
+  mutate(year = factor(year))
+
+# Select the games at and above the 95th percentile for final inning, by season
+tbl_marathons <- 
+  df_extras |>
+  group_by(year) |>
+  filter(final_inning >= quantile(final_inning, probs = 0.95, na.rm = TRUE)) |>
+  ungroup()
+```
+
+```{r}
+#| code-summary: Test
+
+# Factor order
+df_extras_ordered <- mutate(df_extras, rule_change = factor(
+  rule_change,
+  levels = c("TRUE", "FALSE")
+))
+tbl_marathons <- mutate(tbl_marathons, rule_change = factor(
+  rule_change,
+  levels = c("TRUE", "FALSE")
+))
+
+# Test
+ttest_extras <- t.test(extras ~ rule_change, data = df_extras_ordered)
+ttest_marathons <- t.test(final_inning ~ rule_change, data = tbl_marathons)
+```
+
+```{r}
+#| include: false
+
+# Environemnt variables for extra innings t tests
+ttest_extras_estimate <- unname(
+  round(ttest_extras[["estimate"]][2] - ttest_extras[["estimate"]][1])
+)
+
+ttest_extras_ci <- sprintf(
+  '%.1f to %.1f',
+  ttest_extras[['conf.int']][1],
+  ttest_extras[['conf.int']][2]
+)
+
+ttest_marathons_estimate <- unname(
+  round(ttest_marathons[["estimate"]][2] - ttest_marathons[["estimate"]][1])
+)
+
+ttest_marathons_ci <- sprintf(
+  '%.1f to %.1f',
+  ttest_marathons[['conf.int']][1],
+  ttest_marathons[['conf.int']][2]
+)
+```
+
+The addition of an automatic baserunner on second base during extra innings was meant to increase scoring and prevent marathon stalemates. As a result, extra innings required to break ties was reduced (@fig-extras). Extra-inning games were shortened by `r ttest_extras_estimate` inning (95% CI: `r ttest_extras_ci`. @tbl-extras).
+
+Marathon games have been defined for the purpose of this document as games in the 95th percentile of innings required to break the tie. The mean final inning of marathon games decreased by nearly `r ttest_marathons_estimate` (95% CI: `r ttest_marathons_ci`. @fig-marathons).
+
+```{r}
+#| code-summary: Plot
+#| fig-cap: Boxplot summary of extra innings required to break a tie during games from years 2014-2024.
+#| label: fig-extras
+
+# Plot
+ggplot(df_extras, aes(x = year, y = extras, fill = rule_change)) +
+  geom_boxplot(alpha = 0.75, outlier.alpha = 0.2) +
+  
+  # Format
+  scale_y_continuous(breaks = seq(0, 10, by = 1)) +
+  scale_fill_manual(values = c(`TRUE` = dodger_red, `FALSE` = dodger_blue)) +
+  theme(
+    panel.grid.minor = element_blank(),
+    axis.title.y = element_text(angle=0, vjust = 0.5),
+    legend.position = "inside",
+    legend.position.inside = c(0.85, 0.85)
+  ) +
+  labs(
+    title = "Total extra innings per game by year",
+    x = "Season",
+    y = "Extra\ninnings",
+    fill = "Rule change"
+  )
+```
+
+```{r}
+#| code-summary: Table
+#| tbl-cap: Mean extra innings to decide a winnin team by year across 2,152 games.
+#| label: tbl-extras
+
+df_extras |>
+  select(game_pk, year, extras) |>
+  pivot_wider(id_cols = game_pk, names_from = year, values_from = extras) |>
+  gtsummary::tbl_summary(
+    include = -game_pk,
+    missing = "no",
+    type = everything() ~ "continuous",
+    statistic = everything() ~ "{mean} ± {sd}"
+  ) |>
+  gtsummary::modify_header(label = "**Year**")
+```
+
+```{r}
+#| code-summary: Test
+
+# Test
+ttest_extras_runs <- t.test(total_extra_runs ~ rule_change, data = df_extras_ordered)
+ttest_marathons_runs <- t.test(total_extra_runs ~ rule_change, data = tbl_marathons)
+```
+
+```{r}
+#| include: false
+
+# Environemnt variables for extra innings t tests
+ttest_extras_runs_estimate <- unname(
+  round(ttest_extras_runs[["estimate"]][1] - ttest_extras_runs[["estimate"]][2])
+)
+
+ttest_extras_runs_ci <- sprintf(
+  '%.1f to %.1f',
+  ttest_extras_runs[['conf.int']][1],
+  ttest_extras_runs[['conf.int']][2]
+)
+
+ttest_marathons_runs_estimate <- unname(
+  round(ttest_marathons_runs[["estimate"]][1] - ttest_marathons_runs[["estimate"]][2])
+)
+
+ttest_marathons_runs_ci <- sprintf(
+  '%.1f to %.1f',
+  ttest_marathons_runs[['conf.int']][1],
+  ttest_marathons_runs[['conf.int']][2]
+)
+```
+
+The baserunner on second brought more action during extra innings in the form of scoring (@fig-extras-runs). Mean number of runs scored during extra innings per game game increased by `r ttest_extras_runs_estimate` after the rule change (95% CI: `r ttest_extras_runs_ci`. @tbl-extras-runs). In marathon games these runs were increased by slightly more than `r ttest_marathons_runs_estimate` (95% CI: `r ttest_marathons_runs_ci`. @fig-marathons-runs).
+
+```{r}
+#| code-summary: Plot
+#| fig-cap: Boxplot summary of extra innings runs during games from years 2014-2024.
+#| label: fig-extras-runs
+
+# Plot
+ggplot(df_extras, aes(x = year, y = total_extra_runs, fill = rule_change)) +
+  geom_boxplot(alpha = 0.75, outlier.alpha = 0.2) +
+  
+  # Format
+  scale_y_continuous(breaks = seq(0, 12, by = 1)) +
+  scale_fill_manual(values = c(`TRUE` = dodger_red, `FALSE` = dodger_blue)) +
+  theme(
+    axis.title.y = element_text(angle=0, vjust = 0.5),
+    panel.grid.minor.y = element_blank()
+  ) +
+  labs(
+    title = "Total runs scored during extra innings per game by year",
+    x = "Season",
+    y = "Runs",
+    fill = "Rule change"
+  )
+```
+
+```{r}
+#| code-summary: Table
+#| tbl-cap: Mean extra innings runs scored by year across 2,152 games.
+#| label: tbl-extras-runs
+
+df_extras |>
+  select(game_pk, year, total_extra_runs) |>
+  pivot_wider(id_cols = game_pk, names_from = year, values_from = total_extra_runs) |>
+  gtsummary::tbl_summary(
+    include = -game_pk,
+    missing = "no",
+    type = everything() ~ "continuous",
+    statistic = everything() ~ "{mean} ± {sd}"
+  ) |>
+  gtsummary::modify_header(label = "**Year**")
+```
+
+```{r}
+#| code-summary: Test
+
+# Test
+ttest_extras_batters <- t.test(
+  batters_until_first_run ~ rule_change,
+  data = df_extras_ordered
+)
+ttest_marathons_batters <- t.test(
+  batters_until_first_run ~ rule_change,
+  data = tbl_marathons
+)
+```
+
+```{r}
+#| include: false
+
+# Environemnt variables for extra innings t tests
+ttest_extras_batters_estimate <- unname(
+  round(ttest_extras_batters[["estimate"]][2] - ttest_extras_batters[["estimate"]][1])
+)
+
+ttest_extras_runs_ci <- sprintf(
+  '%.1f to %.1f',
+  ttest_extras_batters[['conf.int']][1],
+  ttest_extras_batters[['conf.int']][2]
+)
+
+ttest_marathons_batters_estimate <- unname(
+  round(
+    ttest_marathons_batters[["estimate"]][2] - ttest_marathons_batters[["estimate"]][1]
+  )
+)
+
+ttest_marathons_runs_ci <- sprintf(
+  '%.1f to %.1f',
+  ttest_marathons_batters[['conf.int']][1],
+  ttest_marathons_batters[['conf.int']][2]
+)
+```
+
+Since it became easier to score runs, the fewer batters were needed to initially break the tie (@fig-extras-batters). The mean number of batter appearances before scoring the first run in extra innings decreased by `r ttest_extras_batters_estimate` (95% CI: `r ttest_extras_runs_ci`. TABLE). Marathon games saw the greatest reduction, with a staggering `r ttest_marathons_batters_estimate` fewer batters required to earn the first run during extra innings (95% CI: `r ttest_marathons_runs_ci`. @fig-marathons-batters).
+
+```{r}
+#| code-summary: Plot
+#| fig-cap: Bar chart of batters needed to score the first run during extra innings from years 2014-2024.
+#| label: fig-extras-batters
+
+# Plot
+ggplot(df_extras, aes(x = year, y = batters_until_first_run, fill = rule_change)) +
+  geom_boxplot(alpha = 0.75, outlier.alpha = 0.2) +
+  
+  # Format
+  scale_fill_manual(values = c(`TRUE` = dodger_red, `FALSE` = dodger_blue)) +
+  theme(
+    panel.grid.minor = element_blank(),
+    axis.title.y = element_blank(),
+    legend.position = "inside",
+    legend.position.inside = c(0.85, 0.85)
+  ) +
+  labs(
+    title = "Batters until first run scored in extra innings by year",
+    x = "Season",
+    fill = "Rule change"
+  )
+```
 
 ### Pitch clock
 
@@ -446,12 +721,12 @@ ggplot(tbl_n_per_game_yearly, aes(x = year, y = n, fill = rule_change)) +
 
 ```{r}
 #| code-summary: Table
-#| tbl-cap: Mean pitcher appearances by year across 25,193 games.
+#| tbl-cap: Mean pitcher appearances by year across.
 #| label: tbl-pitchers
 
 tbl_n_per_game_yearly |>
   select(-rule_change) |>
-  tidyr::pivot_wider(id_cols = game_id, names_from = year, values_from = n) |>
+  pivot_wider(id_cols = game_id, names_from = year, values_from = n) |>
   gtsummary::tbl_summary(
     include = -game_id,
     missing = "no",
@@ -547,12 +822,12 @@ ggplot(tbl_changes_per_game_yearly, aes(x = year, y = n, fill = rule_change)) +
 
 ```{r}
 #| code-summary: Table
-#| tbl-cap: Mean mid-inning pitching changes by year across 25,193 games.
+#| tbl-cap: Mean mid-inning pitching changes by year.
 #| label: tbl-mid-inning
 
 tbl_changes_per_game_yearly |>
   select(-rule_change) |>
-  tidyr::pivot_wider(id_cols = game_id, names_from = year, values_from = n) |>
+  pivot_wider(id_cols = game_id, names_from = year, values_from = n) |>
   gtsummary::tbl_summary(
     include = -game_id,
     missing = "no",
@@ -593,14 +868,14 @@ pauses <-
   ) |>
   
   # Wrangle into a named list
-  tidyr::pivot_longer(cols = -rule_change) |>
-  tidyr::pivot_wider(names_from = rule_change, values_from = value) |>
+  pivot_longer(cols = -rule_change) |>
+  pivot_wider(names_from = rule_change, values_from = value) |>
   mutate(diff = paste0(round((`3-batter minimum` - `No minimum`) * 100, 1), "%")) |>
   select(name, diff) |>
   tibble::deframe()
 ```
 
-A mid-inning pitching change would add a pause in play that was not already scheduled, such as pauses in between innings. Games with such pauses were slightly less frequent after the 3-batter minimum implementation(@fig-pauses). The differences in proportions of games with pauses in play due to mid-inning pitching changes were `r pauses[["pause_01"]]` for games with any added pauses, `r pauses[["pause_02"]]` for games with at least 2 pauses, and `r pauses[["pause_03"]]` for games with at least 3 pauses (@tbl-pauses).
+A mid-inning pitching change would add a pause in play that was not already scheduled, such as pauses in between innings. Games with such pauses were slightly less frequent after the 3-batter minimum implementation (@fig-pauses). The differences in proportions of games with pauses in play due to mid-inning pitching changes were `r pauses[["pause_01"]]` for games with any added pauses, `r pauses[["pause_02"]]` for games with at least 2 pauses, and `r pauses[["pause_03"]]` for games with at least 3 pauses (@tbl-pauses).
 
 ```{r}
 #| code-summary: Plot
@@ -653,7 +928,7 @@ tbl_changes_per_game_yearly |>
 
 ```{r}
 #| code-summary: Table
-#| tbl-cap: Count and proportions of  25,193 games with various numbers of pauses in play due to mid-inning pitching changes.
+#| tbl-cap: Count and proportions of games with various numbers of pauses in play due to mid-inning pitching changes.
 #| label: tbl-pauses
 
 # Test result by rule change
@@ -665,6 +940,80 @@ gtsummary::tbl_summary(
   gtsummary::modify_header(label = "**Mid-inning pauses**") |>
   gtsummary::modify_spanning_header(all_stat_cols() ~ "**Rule in place**") |>
   gtsummary::add_p()
+```
+
+## Appendix
+
+```{r}
+#| code-summary: Plot
+#| fig-cap: Boxplot summary of extra innings required to break a marathon tie during games from years 2014-2024.
+#| label: fig-marathons
+
+# Visualize 95th percentile of final inning
+ggplot(tbl_marathons, aes(x = year, y = final_inning, fill = rule_change)) +
+  geom_boxplot(alpha = 0.75) +
+  scale_y_continuous(limits = c(10, 20), breaks = seq(10, 20, by = 2)) +
+  scale_fill_manual(values = c(`TRUE` = dodger_red, `FALSE` = dodger_blue)) +
+  theme(
+    panel.grid.minor = element_blank(),
+    axis.title.y = element_text(angle=0, vjust = 0.5),
+    legend.position = "inside",
+    legend.position.inside = c(0.85, 0.85)
+  ) +
+  labs(
+    title = "Final inning for 95th percentile of game length by year",
+    x = "Season",
+    y = "Final\ninning",
+    fill = "Rule change"
+  )
+```
+
+```{r}
+#| code-summary: Plot
+#| fig-cap: Boxplot summary of extra innings runs during marathon games from years 2014-2024.
+#| label: fig-marathons-runs
+
+# Plot
+ggplot(tbl_marathons, aes(x = year, y = total_extra_runs, fill = rule_change)) +
+  geom_boxplot(alpha = 0.75, outlier.alpha = 0.2) +
+  
+  # Format
+  scale_y_continuous(breaks = seq(0, 12, by = 1)) +
+  scale_fill_manual(values = c(`TRUE` = dodger_red, `FALSE` = dodger_blue)) +
+  theme(
+    axis.title.y = element_text(angle=0, vjust = 0.5),
+    panel.grid.minor.y = element_blank()
+  ) +
+  labs(
+    title = "Total runs scored during extra innings in marathon games by year",
+    x = "Season",
+    y = "Runs",
+    fill = "Rule change"
+  )
+```
+
+```{r}
+#| code-summary: Plot
+#| fig-cap: Bar chart of batters needed to score the first run during marathon games from years 2014-2024.
+#| label: fig-marathons-batters
+
+# Plot
+ggplot(tbl_marathons, aes(x = year, y = batters_until_first_run, fill = rule_change)) +
+  geom_boxplot(alpha = 0.75, outlier.alpha = 0.2) +
+  
+  # Format
+  scale_fill_manual(values = c(`TRUE` = dodger_red, `FALSE` = dodger_blue)) +
+  theme(
+    panel.grid.minor = element_blank(),
+    axis.title.y = element_blank(),
+    legend.position = "inside",
+    legend.position.inside = c(0.85, 0.85)
+  ) +
+  labs(
+    title = "Batters until first run scored in extra innings during marathon games by year",
+    x = "Season",
+    fill = "Rule change"
+  )
 ```
 
 ## References
